--- a/SCSS/main.scss
+++ b/SCSS/main.scss
@@ -1,5 +1,5 @@
 //Imports
-@import "variables" ,"chevron", "cards", "carouselSwipper", "adn", "borderEfect", "rotate", "masServicios";
+@import "variables" ,"chevron", "cards", "carouselSwipper", "adn", "borderEfect", "rotate", "dots", "masServicios";
 *{
     margin: 0;
     padding: 0;
@@ -996,16 +996,16 @@ header{
             @include margin__Espaciado(2em,2em);
             //overflow: auto;
         }
-        .container_calendar{
-            width: 90%;
-            max-width: 600px;
-            height: 100%;
-            max-height: 400px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-        }
     }
+}
+.container_calendar{
+    width: 90%;
+    max-width: 600px;
+    height: 100%;
+    max-height: 400px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 .whatsapp{
     position: fixed;
