--- a/CSS/main.css
+++ b/CSS/main.css
@@ -596,7 +596,7 @@
   transform: translate(-50%, -50%);
 }
 
-.container_dots span {
+.container_dots_span {
   position: absolute;
   display: block;
   height: 10px;
@@ -606,24 +606,24 @@
   animation: dots 2s linear infinite;
 }
 
-span:nth-child(1) {
+.container_dots_span_1 {
   background: #57A9DA;
   box-shadow: 0 0 25px #57A9DA;
 }
 
-span:nth-child(2) {
+.container_dots_span_2 {
   background: #57A9DA;
   box-shadow: 0 0 25px #57A9DA;
   animation-delay: -1s;
 }
 
-span:nth-child(3) {
+.container_dots_span_3 {
   background: #F76304;
   box-shadow: 0 0 25px #F76304;
   animation-delay: -0.5s;
 }
 
-span:nth-child(4) {
+.container_dots_span_4 {
   background: #F76304;
   box-shadow: 0 0 25px #F76304;
   animation-delay: -1.5s;
