--- a/CSS/main.css
+++ b/CSS/main.css
@@ -133,6 +133,9 @@
   -o-transform: translateY(15rem);
   -moz-transform: translateY(15rem);
 }
+.card:hover .dp i {
+  color: #F76304;
+}
 .card:hover {
   box-shadow: rgba(236, 129, 29, 0.89) 3px 4px 17px;
 }
@@ -143,6 +146,7 @@
 .dp {
   display: flex;
   justify-content: center;
+  flex-direction: column;
   align-items: center;
   width: 100%;
   height: 100%;
@@ -163,6 +167,8 @@
 .dp i {
   font-size: 30px;
   color: white;
+  position: absolute;
+  bottom: 10%;
 }
 
 .card_content {
@@ -2206,7 +2212,7 @@ header #toggler, header .contenedor_burgerMenu, header .burger_menu, header .cen
   text-align: center;
   font-family: "Fugaz One", cursive;
   margin-top: 2em;
-  margin-bottom: 1em;
+  margin-bottom: 2em;
   transition: all 1s ease-in-out;
   -moz-transition: all 1s ease-in-out;
   -webkit-transition: all 1s ease-in-out;
@@ -2232,6 +2238,36 @@ header #toggler, header .contenedor_burgerMenu, header .burger_menu, header .cen
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-direction: column;
+}
+.container_calendar a {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  width: 100%;
+  justify-content: flex-start;
+  align-items: center;
+  text-decoration: none;
+  margin-top: 0.5em;
+  margin-bottom: 1em;
+}
+.container_calendar a h4 {
+  text-align: center;
+  width: 76%;
+  color: #E0E0E0;
+  font-family: Arial, Helvetica, sans-serif;
+  transition: all 1s ease-in-out;
+  -moz-transition: all 1s ease-in-out;
+  -webkit-transition: all 1s ease-in-out;
+  -o-transition: all 1s ease-in-out;
+  font-weight: bold;
+}
+.container_calendar a h4:hover {
+  color: #F76304;
+}
+.container_calendar a i {
+  font-size: 30px;
+  color: #E0E0E0;
 }
 
 .whatsapp {
@@ -2509,6 +2545,9 @@ header .center div {
     margin-bottom: 1em;
   }
 
+  .section_servicios .section_servicios_paragraph {
+    width: 80%;
+  }
   .section_servicios .container_content_impulso {
     flex-direction: column;
     width: 100%;
@@ -2555,7 +2594,7 @@ header .center div {
     min-width: 130px;
   }
   .section_nosotros .nosotros_mision_container .nosotros_mision_paragraph {
-    width: 90%;
+    width: 100%;
   }
 
   .section_contacto .contacto_redesUbicacion {
