--- a/SCSS/main.scss
+++ b/SCSS/main.scss
@@ -985,7 +985,7 @@ header{
             width: 60%;
             text-align: center;
             font-family: $letra__principal;
-            @include margin__Espaciado(2em,1em);
+            @include margin__Espaciado(2em,2em);
             @include camuflaje;
         }
         .calendly{
@@ -1006,6 +1006,30 @@ header{
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-direction: column;
+    a{
+        display: flex;
+        flex-direction: row;
+        flex-wrap: nowrap;
+        width: 100%;
+        justify-content: flex-start;
+        align-items: center;
+        text-decoration: none;
+        @include margin__Espaciado(.5em,1em);
+        h4{
+            text-align: center;
+            width: 76%;
+            color: $color_gris_claro;
+            font-family: $letra__secundaria;
+            @include camuflaje;
+            font-weight: bold;
+        }
+        i{
+            font-size: 30px;
+            color: $color_gris_claro
+        }
+    }
+
 }
 .whatsapp{
     position: fixed;
