--- a/SCSS/_responsive.scss
+++ b/SCSS/_responsive.scss
@@ -168,7 +168,7 @@
             } 
         }
     }
-    .masServiciosa_speach{
+    .masServicios_speach{
         .masServicios_brindamos{
             .beneficios{
                 flex-direction: column;
@@ -271,7 +271,7 @@
     .masServicios_intro_content{
         width: 90%;
     }
-    .masServiciosa_speach{
+    .masServicios_speach{
         width: 90%;
         p{
             width: 90%;
