--- a/CSS/main.css
+++ b/CSS/main.css
@@ -819,7 +819,7 @@
   justify-content: center;
   margin-left: 2em;
   height: 100%;
-  width: 25%;
+  width: 29%;
 }
 .masServicios_speach .masServicios__speach__benefician i {
   font-size: 50px;
@@ -2472,6 +2472,28 @@ footer .footer__copyright {
   width: 70%;
 }
 
+@media screen and (max-width: 1185px) {
+  .masServicios_speach .masServicios__speach__container__paragraphBeneficios {
+    margin-bottom: 1em;
+  }
+  .masServicios_speach .masServicios_speach_container_paragraph {
+    width: 90%;
+    padding: 1em;
+  }
+  .masServicios_speach .masServicios__speach__benefician {
+    margin-top: 2em;
+    margin-left: 0;
+    width: 100%;
+  }
+  .masServicios_speach .masServicios__speach__benefician .benefician_container {
+    flex-direction: row;
+    flex-wrap: wrap;
+    width: 100%;
+  }
+  .masServicios_speach .masServicios__speach__benefician .benefician_container .benefician {
+    width: 30%;
+  }
+}
 @media screen and (max-width: 1100px) {
   header .contenedor_logo_header {
     width: 30%;
@@ -2732,6 +2754,37 @@ header .center div {
   }
 }
 @media screen and (max-width: 520px) {
+  .masServicios_speach_container_paragraph {
+    width: 98%;
+  }
+
+  .masServicios_speach .masServicios__speach__container__paragraphBeneficios {
+    margin-bottom: 1em;
+  }
+  .masServicios_speach .masServicios_speach_container_paragraph {
+    width: 100%;
+  }
+  .masServicios_speach .masServicios__speach__benefician .benefician_container {
+    align-items: center;
+  }
+  .masServicios_speach .masServicios__speach__benefician .benefician_container .benefician {
+    width: 100%;
+  }
+
+  .masServicios_formulario .contacto_redes_container .contacto_redes {
+    width: 100%;
+  }
+
+  .masServicios_formulario form {
+    width: 90%;
+  }
+  .masServicios_formulario .formulario_contenedor_textarea {
+    margin-top: 0;
+  }
+  .masServicios_formulario .formulario_contenedor_textarea h3 {
+    margin-top: 0;
+  }
+
   .section_presentacion .contenedor_presentacion .containerCarouselButton .carouselPresentacion {
     margin-top: 1em;
   }
