--- a/SCSS/_responsive.scss
+++ b/SCSS/_responsive.scss
@@ -1,4 +1,28 @@
 //Responsive
+@media screen and (max-width: 1185px) {
+    .masServicios_speach{
+        .masServicios__speach__container__paragraphBeneficios{
+            margin-bottom: 1em;
+        }
+        .masServicios_speach_container_paragraph{
+            width: 90%;
+            padding: 1em;
+        }
+        .masServicios__speach__benefician{
+            margin-top: 2em;
+            margin-left: 0;
+            width: 100%;
+            .benefician_container{
+                flex-direction: row;
+                flex-wrap: wrap;
+                width: 100%;
+                .benefician{
+                    width: 30%;
+                }
+            }
+        }
+    }
+}
 @media screen and (max-width: 1100px) {
     header{
         .contenedor_logo_header{
@@ -279,6 +303,44 @@
     }
 }
 @media screen and (max-width: 520px) {
+    .masServicios_speach_container_paragraph{
+        width: 98%;
+    }
+    .masServicios_speach{
+        .masServicios__speach__container__paragraphBeneficios{
+            margin-bottom: 1em;
+        }
+        .masServicios_speach_container_paragraph{
+            width: 100%;
+        }
+        .masServicios__speach__benefician{          
+            .benefician_container{
+                align-items: center;
+                .benefician{
+                    width: 100%;
+                }
+            }
+        }
+    }
+    .masServicios_formulario{
+        .contacto_redes_container{
+            .contacto_redes{
+                width: 100%;
+            }
+        }
+    }  
+    .masServicios_formulario{
+        form{
+            width: 90%;
+        }
+        .formulario_contenedor_textarea{
+            margin-top: 0;
+            h3{
+                margin-top: 0;
+            }
+        }
+    }
+//cierre media 520px masServicios
     .section_presentacion{
         .contenedor_presentacion{
             .containerCarouselButton{
@@ -308,7 +370,6 @@
                 width: 90%;
             }
         }
-
         .container_content_impulso{
             .container_impulso_speach{
                 min-height: 10rem;
