--- a/CSS/main.css
+++ b/CSS/main.css
@@ -1843,6 +1843,9 @@ header #toggler, header .contenedor_burgerMenu, header .burger_menu, header .cen
 .section_nosotros article .contenedor_nosotros_quienesSomos span:hover, .section_nosotros article .contenedor_nosotros_Speach span:hover {
   color: #F76304;
 }
+.section_nosotros article .contenedor_nosotros h2 {
+  margin-top: 1em;
+}
 .section_nosotros article .contenedor_nosotros_Speach {
   margin-top: 0;
 }
@@ -2050,13 +2053,13 @@ header #toggler, header .contenedor_burgerMenu, header .burger_menu, header .cen
   -moz-transition: all 1s ease-in-out;
   -webkit-transition: all 1s ease-in-out;
   -o-transition: all 1s ease-in-out;
+  margin-top: 1.5em;
+  margin-bottom: 0.5em;
 }
 .section_contacto h2:hover {
   color: #F76304;
 }
 .section_contacto .contacto_redes_container {
-  margin-top: 1em;
-  margin-bottom: 1em;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
