--- a/SCSS/main.scss
+++ b/SCSS/main.scss
@@ -604,6 +604,11 @@ header{
                 @include camuflaje;
             }
         }
+        .contenedor_nosotros{
+            h2{
+                margin-top: 1em;
+            }
+        }
         .contenedor_nosotros_Speach{
             margin-top: 0;
         }
@@ -740,9 +745,9 @@ header{
     h2{
         @include h2;
         @include camuflaje;
+        @include margin__Espaciado(1.5em,.5em);
     }
     .contacto_redes_container{
-        @include margin__Espaciado(1em,1em);
         display: flex;
         flex-direction: row;
         flex-wrap: wrap;
