--- a/CSS/main.css
+++ b/CSS/main.css
@@ -1142,6 +1142,7 @@ header nav {
   font-family: Arial, Helvetica, sans-serif;
   font-weight: bold;
   width: 100%;
+  height: 100%;
 }
 header nav div ul {
   width: 95%;
