--- a/SCSS/main.scss
+++ b/SCSS/main.scss
@@ -55,6 +55,7 @@ header{
         font-family: $letra__secundaria;
         font-weight: bold;
         width: 100%;
+        height: 100%;
         div{
             ul{
                 width: 95%;
