--- a/SCSS/_variables.scss
+++ b/SCSS/_variables.scss
@@ -14,6 +14,12 @@ $color_naranja: #F6A23E;
 $color_celeste_claro:#7EC2EC ;
 $color_celeste_oscuro: #57A9DA;
 $color_amarillo: #FCE062;
+//otros colores
+$color_fucsia: #FF41AA;
+$color_fucsia2: #FF40AC;
+$color_verdelima: #B8E701;
+$color_azulOscuro: #131e2c;
+$color_naranjaApagado: #f49c13;
 //Tamaños
 $logo-width:calc(5em + 5vw);
 //Mixins
