--- a/CSS/main.css
+++ b/CSS/main.css
@@ -1099,7 +1099,7 @@ body {
   font-family: "Fugaz One", cursive;
   font-display: swap;
   box-sizing: border-box;
-  background-color: #535558;
+  background-color: #131e2c;
   scroll-behavior: smooth;
 }
 
@@ -1130,6 +1130,12 @@ header .particles-js-canvas-el {
   width: 100%;
   height: 100%;
   background-color: #000000;
+}
+header .particles_transition {
+  transition: all 0.3s ease-in-out;
+}
+header .particles__blue {
+  background-color: #131e2c;
 }
 header nav {
   position: relative;
