--- a/SCSS/main.scss
+++ b/SCSS/main.scss
@@ -1066,7 +1066,7 @@ header{
 }
 //footer
 footer{
-    background-color: $color_gris_oscuro;
+    background-color: $color_azulOscuro2;
     overflow: hidden;
     hr{
         color: $color_gris_claro;
