--- a/SCSS/_variables.scss
+++ b/SCSS/_variables.scss
@@ -3,7 +3,7 @@ $letra__principal: 'Fugaz One', cursive;
 $letra__secundaria: Arial, Helvetica, sans-serif;
 $colorLetra__Principal: #ffff;
 $colorLetra__Secundaria: orange;
-$color_naranja_cohete: #F76304;
+$color_naranja_cohete: #f49c13;
 $color_amarillo_cohete: #FFC93A;
 $color_celeste_cohete: #00BBF0;
 //Paleta colores
@@ -21,6 +21,7 @@ $color_verdelima: #B8E701;
 $color_azulOscuro: #131e2c;
 $color_naranjaApagado: #f49c13;
 $color_azulOscuro2: #101925;
+$color_cohetenaranja: #F76304;
 $color-gradiente: linear-gradient(90deg, rgba(87,169,218,1) 26%, rgba(255,65,170,1) 40%, rgba(184,231,1,1) 49%, rgba(244,156,19,1) 63%, rgba(87,169,218,1) 76%);
 //Tamaños
 $logo-width:calc(5em + 5vw);
