--- a/SCSS/main.scss
+++ b/SCSS/main.scss
@@ -6,7 +6,8 @@
     box-sizing: border-box;
 }
 body{
-    font-family: 'Fugaz One', cursive;
+    font-family: Arial, Helvetica, sans-serif;
+    //font-family: 'Fugaz One', cursive;
     font-display: swap;
     box-sizing: border-box;
     background-color: $color_azulOscuro;
