--- a/SCSS/_carouselSwipper.scss
+++ b/SCSS/_carouselSwipper.scss
@@ -3,6 +3,7 @@
     align-items: center;
     width: 90%;
     justify-content: center;
+    font-family: $letra__principal;
 }
 .carousel_container{
     padding: 1em;
